--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,9 @@ jobs:
     - name: Build project 🏗️
       run: npm run build
 
-    - name: Deploy to GitHub Pages 🚀
+    - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
+        publish_branch: gh-pages  # 新增此行
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./dist
