--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
@@ -21,6 +22,7 @@
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
     "postcss-nested": "^7.0.2",
+    "sass-embedded": "^1.89.2",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
